@@ -109,7 +109,7 @@
         <button id='list_tasks_create_task_button'>Create Task</button>
         <button id='list_tasks_gantt_save_button'>Save</button>
       </div>
-      <div style="width: 100px; float: left">&nbsp</div>
+      <div style="width: 100px; float: left"></div>
     {% endif %}
     <div style="float: left;">
       <button id='list_tasks_zoom_out_button'>Zoom Out</button>
